--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -28,12 +28,51 @@
             <div class="row">
                 <div class="col-12">
                     <h1>{{ _('Consent Documents') }}</h1>
-                    {{ _('Survey') }}
-                    {{ _('Biospecimen') }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="card p-4 mt-4">
+                        <div class="row">
+                            <div class="consent-col">
+                                <h2>{{ _('Survey') }}</h2>
+                            </div>
+                            <div class="consent-col col-end">
+                                <a href="#" class="consent-link">
+                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> View
+                                </a>
+                            </div>
+                            <div class="consent-col">
+                                <a href="#" class="consent-link">
+                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> Download
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="card p-4 mt-4">
+                        <div class="row">
+                            <div class="col">
+                                <h2>{{ _('Biospecimen') }}</h2>
+                            </div>
+                            <div class="consent-col col-end">
+                                <a href="#" class="consent-link">
+                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> View
+                                </a>
+                            </div>
+                            <div class="consent-col">
+                                <a href="#" class="consent-link">
+                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> Download
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 
 {% endblock %}
