--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -232,9 +232,15 @@
                     </div>
                     <div class="row">
                         <div class="col-12 mt-4 text-end">
-                            <button class="btn btn-white-red-border me-5" name="remove_button" onClick="return verifyDissociateSample();">{{ _('Remove') }}</button>
-                            <button class="btn btn-white-blue-border" name="cancel_button" onClick="return goToKits();">{{ _('Cancel') }}</button>
-                            <button type="submit" class="btn btn-blue-gradient" name="kit_id_button" id="kit_id_button">{{ _('Save') }}</button>
+                            {% if not sample.sample_remove_locked %}
+                                <button class="btn btn-white-red-border me-5" name="remove_button" onClick="return verifyDissociateSample();">{{ _('Remove') }}</button>
+                            {% endif %}
+                            {% if sample.sample_edit_locked %}
+                            <span class="kit-tooltip-text">{{ _('Your sample has been received by our lab and can no longer be edited. Please <a href="mailto:microsetta@ucsd.edu">contact us</a> with any questions.') }}</span>
+                            {% else %}
+                                <button class="btn btn-white-blue-border" name="cancel_button" onClick="return goToKits();">{{ _('Cancel') }}</button>
+                                <button type="submit" class="btn btn-blue-gradient" name="kit_id_button" id="kit_id_button">{{ _('Save') }}</button>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
