--- a/microsetta_interface/templates/reports.jinja2
+++ b/microsetta_interface/templates/reports.jinja2
@@ -35,7 +35,7 @@
                 url: url,
                 type: "GET",
                 success: function(data) {
-                    if (data.length == 0) {
+                    if (data.length > 0) {
                         renderButton(sampleId);
                     }
                 }
