--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -39,7 +39,7 @@
                             </div>
                             <div class="consent-col col-end">
                                 <a href="#" class="consent-link">
-                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> View
+                                    <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> View
                                 </a>
                             </div>
                             <div class="consent-col">
@@ -60,7 +60,7 @@
                             </div>
                             <div class="consent-col col-end">
                                 <a href="#" class="consent-link">
-                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> View
+                                    <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> View
                                 </a>
                             </div>
                             <div class="consent-col">
